Remove `exomiser-core` from `lirical-background`.
Signed-off-by: Daniel Danis <daniel.gordon.danis@protonmail.com>